--- a/material_api/src/main/resources/application.properties
+++ b/material_api/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=8081
 
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/hgo_material?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
