--- a/material_api/src/main/resources/application.properties
+++ b/material_api/src/main/resources/application.properties
@@ -1,7 +1,8 @@
+server.servlet.context-path=/material
 server.port=8081
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/hgo_material?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://182.92.194.86:3306/hgo_material?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=mz991013
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
