--- a/material_api/src/main/resources/application.properties
+++ b/material_api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/hgo_material?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.52.239.27:3306/1 and 2?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=deQA0VNIQvLf
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
